added devise and login

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Welcome to My Pinterested App</h1>
-<p>Pretty Awesome!</p>
+<div class="jumbotron center">
+    <h1>Welcome To My App</h1>
+    <p>This Will Be The Best App Ever!</p>
+    <p>Please stay tuned as my new app develops.  It will be <strong>mind </strong>blowing!</p>
+    <%= link_to "Login", new_user_session_path, class: 'btn btn-default'%>
+    <%= link_to "Join", new_user_registration_path, class: 'btn btn-primary'%>
+    
+</div>
